plasma_install_package(binary-clock/package org.kde.plasma.binaryclock)
plasma_install_package(calculator/package org.kde.plasma.calculator)
plasma_install_package(fuzzy-clock/package org.kde.plasma.fuzzyclock)
plasma_install_package(katesessions org.kde.plasma.addons.katesessions)
plasma_install_package(keyboardindicator org.kde.plasma.keyboardindicator)
plasma_install_package(kickerdash org.kde.plasma.kickerdash)
plasma_install_package(konsoleprofiles/package org.kde.plasma.konsoleprofiles)
plasma_install_package(userswitcher/package org.kde.plasma.userswitcher)

add_subdirectory(colorpicker)
add_subdirectory(comic)
add_subdirectory(dict)
add_subdirectory(diskquota)
add_subdirectory(fifteenPuzzle)
add_subdirectory(grouping)
add_subdirectory(mediaframe)
add_subdirectory(notes)
add_subdirectory(quicklaunch)
add_subdirectory(timer)
add_subdirectory(weather)
add_subdirectory(webbrowser)
