plasma_install_package(kickerdash org.kde.plasma.kickerdash)

add_subdirectory(konsoleprofiles)
add_subdirectory(userswitcher)
add_subdirectory(katesessions)
add_subdirectory(fuzzy-clock)
add_subdirectory(calculator)
add_subdirectory(binary-clock)
add_subdirectory(keyboardindicator)
add_subdirectory(colorpicker)
add_subdirectory(comic)
add_subdirectory(dict)
add_subdirectory(diskquota)
add_subdirectory(fifteenPuzzle)
add_subdirectory(grouping)
add_subdirectory(mediaframe)
add_subdirectory(notes)
add_subdirectory(quicklaunch)
add_subdirectory(timer)
add_subdirectory(weather)
add_subdirectory(webbrowser)
