# packages
set(KWIN_NAME "kwin")
install( DIRECTORY big_icons    DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY compact      DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY coverswitch  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY flipswitch   DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY informative  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY present_windows  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY small_icons  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY text         DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY thumbnail_grid   DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
install( DIRECTORY thumbnails   DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )

install (FILES IconTabBox.qml DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox/big_icons/contents/ui)
install (FILES IconTabBox.qml DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox/small_icons/contents/ui)
